feat: fully implemented m5
